# PyOMP

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  MANIFEST.in  README.md  build.sh  llvm-project-build.sh  llvmlite-build.sh  numba-build.sh  pyproject.toml  setup-env.sh  setup.py  submodule_update.sh  subtree_pull.sh
.github/workflows/: build-containers.yml  build-upload-conda-base.yml  build-upload-conda-test.yml  build-upload-conda.yaml  build-upload-conda.yml  build-upload-pypi-conda-test.yml  build-upload-pypi-conda.yml  build-upload-pypi.yml  build-upload-testpypi.yml  build-upload-wheels.yml  cross-build-podman.yaml  cross-build-upload-conda.yaml  env.yaml
.github/workflows/envs/: env-test.yml  env.yml
.gitlab/: custom-jobs-and-variables.yml  subscribed-pipelines.yml
.gitlab/jobs/: lassen.yml  ruby.yml  tioga.yml
buildscripts/cibuildwheel/: setup-env.sh  setup-miniconda3.sh
buildscripts/conda-recipe/: meta.yaml
buildscripts/conda-recipes/llvm-openmp-dev/: build.sh  conda_build_config.yaml  meta.yaml
buildscripts/conda-recipes/llvm-openmp-dev/patches/: 0001-BACKPORT-Fix-for-CUDA-OpenMP-RTL.patch
buildscripts/conda-recipes/llvmdev/: bld.bat  build.sh  meta.yaml
buildscripts/conda-recipes/llvmdev/patches/: 0000-Find-conda-gcc-installation.patch  0001-Fix-sysroot-detection-for-linux.patch  0002-clang-add-conda-specific-env-var-CONDA_BUILD_SYSROOT.patch  0003-Fix-normalizeProgramName-s-handling-of-dots-outside-.patch  0004-Set-VERSION-in-osx-as-well.patch  0005-Fix-crosscompiling-LLVM-tools.patch  0006-Only-error-on-undefined-TARGET_OS_OSX.patch  0007-set-libclang-SOVERSION-unconditionally.patch  llvm14-remove-use-of-clonefile.patch  llvm14-svml.patch
buildscripts/conda-recipes/llvmlite/: build.sh  conda_build_config.yaml  meta.yaml  run_test.py
buildscripts/conda-recipes/numba/: build.sh  meta.yaml  run_test.sh
buildscripts/conda-recipes/pyomp/: conda_build_config.yaml  meta.yaml  run_test.sh
buildscripts/containers/: Dockerfile
buildscripts/containers/examples/: hello.py  pi_loop.py  pi_task.py
buildscripts/gitlab/: build-and-test.sh  create-conda-pkgs.sh
buildscripts/local/: build-all.sh  build-llvm.sh  build-llvmlite.sh  build-numba.sh  requirements.txt
buildscripts/scripts/: build-all.sh  build-llvm.sh  build-llvmlite.sh  build-numba.sh
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  openmp.rst  usage.rst
examples/: TestDataEnv.py  dgemm_ompGPU.py  hello-target.py  hello.py  piParLoopGPU_BUD.py  piParLoopGPU_BUD_combined.py  piParLoopGPU_loop.py  pi_loop.py  pi_spmd.py  pi_task.py  ploop.1.py
ffi/: CMakeLists.txt  Makefile.linux  build.py  file_system.cpp  targets.cpp
llvm-project/llvm/include/llvm/: LinkAllPasses.h
llvm-project/llvm/include/llvm/Transforms/IntrinsicsOpenMP/: IntrinsicsOpenMP.h
llvm-project/llvm/lib/Passes/: PassRegistry.def
llvm-project/llvm/lib/Transforms/: CMakeLists.txt
llvm-project/llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm-project/llvm/lib/Transforms/IntrinsicsOpenMP/: IntrinsicsOpenMP.cpp
llvm-project/llvm/tools/opt/: CMakeLists.txt
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp
llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm/lib/Transforms/IntrinsicsOpenMP/: CMakeLists.txt  IntrinsicsOpenMP.cpp
llvm/tools/bugpoint/: CMakeLists.txt
llvmlite/binding/: __init__.py  ffi.py  file_system.py  passmanagers.py
llvmlite/ffi/: build.py  custom_passes.cpp  passmanagers.cpp
llvmlite/ir/: builder.py  instructions.py  module.py  types.py
llvmlite/llvmlite/binding/: __init__.py  targets.py
llvmlite/llvmlite/ir/: builder.py
llvmlite/llvmpy/: core.py
llvmlite/tests/: test_ir.py
numba/: __init__.py  openmp.py
numba/core/: analysis.py  codegen.py  config.py  ir.py  lowering.py  pylowering.py  typeinfer.py  untyped_passes.py
numba/cpython/: numbers.py  rangeobj.py
numba/numba/core/: base.py  cgutils.py  codegen.py  compiler.py  cpu.py  imputils.py  ir_utils.py  options.py  transforms.py  withcontexts.py
numba/numba/core/typing/: builtins.py
numba/numba/cpython/: mathimpl.py
numba/numba/parfors/: parfor_lowering.py
numba/openmp/: __init__.py
numba/openmp/libs/pass/: CMakeLists.txt  IntrinsicsOpenMP_CAPI.h
numba/openmp/nrt/: init.c
numba/openmp/pass/: CMakeLists.txt  IntrinsicsOpenMP.cpp  IntrinsicsOpenMP.h
numba/openmp/tests/: test_openmp.py
numba/parfors/: parfor.py
src/libs/pass/: CGIntrinsicsOpenMP.cpp  CMakeLists.txt  DebugOpenMP.cpp
src/numba/openmp/: __init__.py  analysis.py  compiler.py  config.py  decorators.py  exceptions.py  ir_utils.py  link_utils.py  llvm_pass.py  llvmlite_extensions.py  offloading.py  omp_context.py  omp_grammar.py  omp_ir.py  omp_lower.py  omp_runtime.py  overloads.py  parser.py  tags.py
src/numba/openmp/libs/libomp/patches/: 0002-Fix-missing-includes.patch  0003-Link-static-LLVM-libs.patch
src/numba/openmp/libs/libomp/patches/14.0.6/: 0002-Fix-missing-includes.patch  0003-Link-static-LLVM-libs.patch
src/numba/openmp/libs/libomp/patches/15.0.7/: 0001-Fix-missing-includes.patch  0002-Link-LLVM-statically.patch
src/numba/openmp/libs/libomp/patches/16.0.6/: 0001-Load-plugins-from-install-directory.patch
src/numba/openmp/libs/libomp/patches/20.1.8/: 0002-Link-statically-LLVM.patch  0003-Do-not-build-liboffload.patch
src/numba/openmp/libs/openmp/patches/14.0.6/: 0001-BACKPORT-Fix-for-CUDA-OpenMP-RTL.patch
src/numba/openmp/libs/openmp/patches/15.0.7/: 0003-Disable-opaque-pointers-DeviceRTL-bitcode.patch
src/numba/openmp/libs/openmp/patches/16.0.6/: 0002-Link-LLVM-statically.patch
src/numba/openmp/libs/openmp/patches/20.1.8/: 0001-Enable-standalone-build.patch  0004-Add-getter-for-device-info.patch
src/numba/openmp/libs/pass/: CGIntrinsicsOpenMP.cpp  CGIntrinsicsOpenMP.h  CMakeLists.txt  DebugOpenMP.cpp  DebugOpenMP.h  IntrinsicsOpenMP.cpp  IntrinsicsOpenMP.h  IntrinsicsOpenMP_CAPI.h
src/numba/openmp/tests/: test_openmp.py
