[build-system]
requires = ["setuptools>=75.3", "setuptools-scm>=8", "cmake>=3.20", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "pyomp"
dynamic = ["version"]
description = "Python OpenMP library based on Numba"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "BSD-2-Clause"
license-files = ["LICENSE", "LICENSE-OPENMP.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
]
dependencies = ["numba>=0.62, <0.64", "lark", "cffi", "setuptools"]
maintainers = [
    { name = "Giorgis Georgakoudis", email = "georgakoudis1@llnl.gov" },
]

[project.urls]
Homepage = "https://github.com/Python-for-HPC/PyOMP"
Issues = "https://github.com/Python-for-HPC/PyOMP/issues"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

# Use discovery for the numba.* namespace.
[tool.setuptools.packages.find]
where = ["src"]
include = ["numba.openmp*"]

# Bundle the CMake-installed artifacts into the wheel.
[tool.setuptools.package-data]
"numba.openmp.libs" = ["pass/*", "libomp/**/*"]

# setuptools-scm config
[tool.setuptools_scm]
write_to = "src/numba/openmp/_version.py"
local_scheme = "no-local-version"

[tool.cibuildwheel]
archs = ["native"]
# Pass LLVM_VERSION from the host environment to cibuildwheel.
environment-pass = ["LLVM_VERSION"]
# We use miniconda3 to get the clang/llvm toolchain on Linux.
before-build = ["rm -rf build dist src/*.egg-info"]
skip = ["*-musllinux_*", "cp38-*"]
test-command = [
    # Run host OpenMP tests.
    "TEST_DEVICES=0 RUN_TARGET=0 python -m numba.runtests -v -- numba.openmp.tests.test_openmp",
    # Run device (cpu target) OpenMP tests.
    "OMP_TARGET_OFFLOAD=mandatory TEST_DEVICES=1 RUN_TARGET=1 python -m numba.runtests -v -- numba.openmp.tests.test_openmp.TestOpenmpTarget",
]

[tool.cibuildwheel.environment]
USE_CXX11_ABI = "1"
PIP_NO_INPUT = "1"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y elfutils-libelf-devel libffi-devel clang-devel-20.1.8 llvm-devel-20.1.8",
]

[tool.cibuildwheel.linux.environment]
LLVM_DIR = "/usr/lib64/cmake/llvm"
CC = "/usr/bin/clang"
CXX = "/usr/bin/clang++"

[tool.cibuildwheel.macos]
before-all = ["bash buildscripts/cibuildwheel/setup-miniconda3.sh"]

[tool.cibuildwheel.macos.environment]
LLVM_DIR = "${PWD}/_stage/miniconda3/envs/llvmdev-${LLVM_VERSION}/lib/cmake/llvm"
CC = "${PWD}/_stage/miniconda3/envs/llvmdev-${LLVM_VERSION}/bin/clang"
CXX = "${PWD}/_stage/miniconda3/envs/llvmdev-${LLVM_VERSION}/bin/clang++"
# Set the deplioyment target to macOS 11.0.
MACOSX_DEPLOYMENT_TARGET = "11.0"
# Set the cmake prefix path to find libraries in the conda environment which is
# compatible with the macos target.
CMAKE_PREFIX_PATH = "${PWD}/_stage/miniconda3/envs/llvmdev-${LLVM_VERSION}/"
